simple/kubernetes-apim-ingresses/wso2apim-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wso2apim-ingress
  namespace: wso2
  labels:
    pattern: wso2am-pattern-1-am
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  tls:
    - hosts:
        - wso2apim-server
        - wso2apim-gateway
  rules:
    - host: wso2apim-server
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wso2am-pattern-1-am-pubsub-service
                port:
                  number: 9443
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wso2am-pattern-1-am-pubsub-service
                port:
                  number: 9763
    - host: wso2apim-gateway
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wso2am-pattern-1-am-gateway-service
                port:
                  number: 8243
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wso2am-pattern-1-am-gateway-service
                port:
                  number: 8280
